kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-final-deployment
  namespace: devops
  labels:
    app: proyecto-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proyecto-final
  template:
    metadata:
      labels:
        app: proyecto-final
    spec:
      containers:
      - name: proyecto-final
        image: localhost:8082/proyecto-devops:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto-final-svc
  namespace: devops
  labels:
    app: proyecto-final
spec:
  selector:
    app: proyecto-final
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-final-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /proyecto(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: proyecto-final-svc
            port:
              number: 80
